// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a contact 1`] = `
<Flex>
  <Translate(AssignToMeButton)
    onPress={[Function]}
  />
  <Flex
    align="center"
    direction="row"
    justify="center"
  />
</Flex>
`;

exports[`renders correctly for a member 1`] = `
<Flex>
  <Translate(AssignToMeButton)
    onPress={[Function]}
  />
  <Flex
    align="center"
    direction="row"
    justify="center"
  >
    <CenteredIconButtonWithText
      icon="textIcon"
      key="some key"
      text="Message"
    />
    <CenteredIconButtonWithText
      icon="callIcon"
      key="some key"
      text="Call"
    />
    <CenteredIconButtonWithText
      buttonStyle={
        Object {
          "fontSize": 20,
        }
      }
      icon="emailIcon"
      key="some key"
      text="Email"
    />
  </Flex>
</Flex>
`;
